# elections-peru-2026

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: config.py
app/models/: candidates.py  chat.py  events.py  investigation.py  news.py  quiz.py
app/routers/: candidates.py  chat.py  events.py  investigation.py  news.py  quiz.py
app/services/: adaptive_quiz.py  chat_service.py  data_loader.py
data/: all_candidates_2026.json  candidatos_2026.json  political_events.json  political_events_seed.json  posiciones_candidatos.json  question_bank.json
migrations/: 001_schema.sql  002_political_events.sql
scripts/: _db.py  _news_common.py  collect_candidates.py  collect_events.py  collect_news.py  collect_planes.py  extract_positions.py  migrate.py
web/: astro.config.mjs  package-lock.json  package.json
web/src/components/: CandidateCard.astro  Footer.astro  Header.astro  SEOHead.astro
web/src/islands/: CandidateSearch.tsx  ChatInput.tsx  ChatInterface.tsx  ChatMessage.tsx  EventDetailView.tsx  EventsFilter.tsx  InvestigaDetailView.tsx  InvestigaGrid.tsx  MatchCard.tsx  NewsDetail.tsx  NewsFilter.tsx  QuizFlow.tsx  QuizProgress.tsx  QuizResults.tsx  RadarChart.tsx  TopicAccordion.tsx  TopicBreakdown.tsx
web/src/layouts/: BaseLayout.astro
web/src/lib/: api.ts  constants.ts  quiz-store.ts  types.ts  utils.ts
web/src/pages/: 404.astro  acerca.astro  chat.astro  index.astro
web/src/pages/brujula/: index.astro  resultados.astro
web/src/styles/: global.css
(+8 files in other folders)
